fix background not showing in dashboard

--- a/src/app/static/styles/index.less
+++ b/src/app/static/styles/index.less
@@ -52,7 +52,7 @@
   }
 }
 
-#balansol {
+.balansol-background {
   &:after {
     content: '';
     background: url('../../static/images/balansol-background.png');
